One last quick fix.
Noticed that the title and avatar were a little too big on mobile.
Re-used media query from masthead.

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -177,6 +177,16 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: 0;
 }
 
+@media (max-width: 48rem) {
+  .profile-avatar {
+    height: 125px;
+    width: 125px;
+  }
+  .profile-title {
+    font-size: 2rem;
+  }
+}
+
 /*
  * Sidebar
  *
